<resources>
    <string name="app_name">丑八怪</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search_hint">搜索相关内容</string>
    <string name="input_number">请输入手机号！</string>
    <string name="check_number">请输入正确的手机号！</string>
    <string name="input_code">请输入验证码</string>
    <string name="code_fail">获取验证码失败</string>
    <string name="user_name">用户名:</string>
    <string name="pwd">密码:</string>
    <string name="re_pwd">确认密码:</string>
    <string name="input_pwd">设置一个密码吧</string>
    <string name="re_input_pwd">确认你的密码</string>
    <string name="sex">性别:</string>
    <string name="wrong_input">输入有误！</string>
    <string name="logo">logo</string>
    <string name="start_personal">开始你的个性化设置</string>
    <string name="password">密码：</string>
    <string-array name="deploy_type">
        <item>全部</item>
        <item>服饰</item>
        <item>发型</item>
        <item>化妆品</item>
        <item>其他</item>
    </string-array>
</resources>
