<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_marginTop="50dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:textSize="22sp"
            android:text="@string/user_name"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_user_name"
            android:layout_weight="1"
            android:ems="10"
            android:hint="想一个高大上的名字吧"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:textSize="22sp"
            android:text="@string/sex"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioGroup
            android:id="@+id/rg_sex"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_man"
            android:checked="true"
            android:textSize="20sp"
            android:text="男生"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/rb_girl"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:text="女生"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:textSize="22sp"
            android:text="@string/pwd"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:ems="10"
            android:layout_marginLeft="30dp"
            android:id="@+id/et_pwd"
            android:layout_weight="1"
            android:hint="@string/input_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:textSize="22sp"
            android:text="@string/re_pwd"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_re_pwd"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/re_input_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:id="@+id/bt_per_next"
        android:textColor="@android:color/white"
        android:background="@drawable/rectangle_button"
        android:text="下一步"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>